<resources>
    <string name="app_name">Spoti5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_id">Email id</string>
    <string name="password">Password ( At least 6 characters )</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_a_account">Already have a account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_worry_we_just_need_your_registered_email_address_and_it_s_done">Don\'t worry we just need your registered email address and it\'s done!</string>
    <string name="go_back">Go Back</string>
    <string name="log_out">Log out</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="default_web_client_id">1094206998274-srlahte35gbru01fdcvtuu16mgbqgp5t.apps.googleusercontent.com</string>
</resources>